--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,10 @@ body::-webkit-scrollbar {
   position: sticky;
   top: 0;
   z-index: 1;
+  width: 100vw;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .Header {
     display: none;
   }
